tests/chapter_18/valid/no_structure_parameters/typecheck/define_then_declare.c
// if we've already defined/declared a struct, declaring it again in the same
// scope does nothing

int main(void) {
  struct s {
    int a;
  };
  struct s; // this does nothing

  struct s x = {1};
  return x.a;
}