tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_local_var.c
struct s;

int main(void) {
  // can't declare a local variable with incomplete struct type
  struct s v;
  return 0;
}